--- a/index.html
+++ b/index.html
@@ -5,101 +5,181 @@
     <meta charset="utf-8">
     <title>Address Checker</title>
     <style>
-      #map {
-        height: 0%;
-      }
       html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
+      #location {
+        width: 200px;
+      }
+
+      #address {
+        display: none;
+      }
     </style>
   </head>
   <body>
     <div>
-      This is a proof of concept. The box below will tell you what imaginary schools in Austin your children would be assigned to. Results will appear in the console.
+      This is a proof of concept based which checks if an address correlates with an array of andress ranges instead of checking if it falls within a boundary on Google Maps. The box below will tell you what schools in Beverly Hills your children would be assigned to. Results will appear in the console.
     </div>
     <input type="text" id="location"></input>
+    Select Grade: <select id="grade">
+      <option value="k">K</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+    </select>
+
+
+    <table id="address_table">
+      <tr>
+        <td class="label">Street address</td>
+        <td class="slimField"><input class="field" id="street_number" disabled="true"/></td>
+        <td class="wideField" colspan="2"><input class="field" id="route" disabled="true"/></td>
+      </tr>
+      <tr>
+        <td class="label">City</td>
+        <td class="wideField" colspan="3"><input class="field" id="locality" disabled="true"/></td>
+      </tr>
+      <tr>
+        <td class="label">State</td>
+        <td class="slimField"><input class="field" id="administrative_area_level_1" disabled="true"/></td>
+        <td class="label">Zip code</td>
+        <td class="wideField"><input class="field" id="postal_code" disabled="true"/></td>
+      </tr>
+      <tr>
+        <td class="label">Country</td>
+        <td class="wideField" colspan="3"><input class="field" id="country" disabled="true"/></td>
+      </tr>
+    </table>
+
     <input type="button" id="submit" value="Check Location"></input>
-    <div id="results"></div>
+
+
+    <div id="results">
+    </div>
     <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf2xUELY06TyIxIK8I-atfPDxLE5dAn88&libraries=geometry&callback=initMap"
-         async defer></script>
+    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf2xUELY06TyIxIK8I-atfPDxLE5dAn88&libraries=places"></script> -->
     <script type="text/javascript" src="js/schools.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="js/boundaries.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf2xUELY06TyIxIK8I-atfPDxLE5dAn88&libraries=places&callback=initAutocomplete" async defer></script>
+
     <script>
+      let display = document.getElementById('results');
+      var html;
+      // Listen for "Check Location" button
+      document.getElementById('submit').addEventListener('click', function() {
+        var address = {
+          'num' : Number(document.getElementById('street_number').value),
+          'street' :  document.getElementById('route').value,
+          'city' : document.getElementById('locality').value,
+          'zip' : document.getElementById('postal_code').value,
+          'grade' : document.getElementById('grade').value
+        }
+        let assignedSchool = checkAddress(address, boundaries, schools);
+        console.log(assignedSchool);
+        if(assignedSchool != -1){
+          html = '<span id="school_name">' + assignedSchool.name + '</span><span id="school_phone">'+ assignedSchool.phone + '</span><span id="school_address">'+ assignedSchool.address + '</span>';
+        } else {
+          html = 'Sorry, no results could be returned';
+        }
+        display.innerHTML = html;
+      });
 
-      // Initialize Map
-      function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 30.267, lng: -97.743},
-          zoom: 9,
-        });
+      var placeSearch, autocomplete;
 
-        var geocoder = new google.maps.Geocoder();
+      var componentForm = {
+        street_number: 'short_name',
+        route: 'long_name',
+        locality: 'long_name',
+        administrative_area_level_1: 'short_name',
+        country: 'long_name',
+        postal_code: 'short_name'
+      };
 
-        var hsAreas = createBoundaries(hsCoords);
-        var msAreas = createBoundaries(msCoords);
-        var esAreas = createBoundaries(esCoords);
+      function initAutocomplete() {
+        // Create the autocomplete object, restricting the search predictions to
+        // geographical location types.
+        autocomplete = new google.maps.places.Autocomplete(
+            document.getElementById('location'), {types: ['geocode']});
 
-        var areas = [hsAreas, msAreas, esAreas];
+        // Avoid paying for data that you don't need by restricting the set of
+        // place fields that are returned to just the address components.
+        // autocomplete.setFields('address_components');
 
+        // When the user selects an address from the drop-down, populate the
+        // address fields in the form.
+        autocomplete.addListener('place_changed', fillInAddress);
+      }
 
-        // Creates polygon for each school
-        function createBoundaries(schools) {
-          var area = []
-          schools.forEach(function(coords){
-            area.push(new google.maps.Polygon({paths: coords}));
-          });
-          return area;
+      function fillInAddress() {
+        // Get the place details from the autocomplete object.
+        var place = autocomplete.getPlace();
+
+        for (var component in componentForm) {
+          document.getElementById(component).value = '';
+          // document.getElementById(component).disabled = false;
         }
 
-        // Listen for "Check Location" button
-        document.getElementById('submit').addEventListener('click', function() {
-          checkAddress(geocoder, map, areas, schools);
-        });
-      }
-
-
-      // Checks to see what school the address would be assigned to and displays results
-      function checkAddress(geocoder, resultsMap, areas, schools) {
-        var address = document.getElementById('location').value;
-        geocoder.geocode({'address': address}, function(results, status) {
-          if (status === 'OK') {
-
-            let latLng = results[0].geometry.location;
-            let answer = document.getElementById('results');
-            let poly = google.maps.geometry.poly;
-
-            var hsID = schoolCheck(areas[0], poly, latLng);
-            var msID = schoolCheck(areas[1], poly, latLng);
-            var esID = schoolCheck(areas[2], poly, latLng);
-
-            console.log(schools[0][hsID]);
-            console.log(schools[1][msID]);
-            console.log(schools[2][esID]);
-
-          } else {
-            alert('Geocode was not successful for the following reason: ' + status);
+        // Get each component of the address from the place details,
+        // and then fill-in the corresponding field on the form.
+        for (var i = 0; i < place.address_components.length; i++) {
+          var addressType = place.address_components[i].types[0];
+          if (componentForm[addressType]) {
+            var val = place.address_components[i][componentForm[addressType]];
+            document.getElementById(addressType).value = val;
           }
-        });
+        }
       }
 
-      function schoolCheck(areas, poly, latLng){
+      // Bias the autocomplete object to the user's geographical location,
+      // as supplied by the browser's 'navigator.geolocation' object.
+      function geolocate() {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var geolocation = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+            var circle = new google.maps.Circle(
+                {center: geolocation, radius: position.coords.accuracy});
+            autocomplete.setBounds(circle.getBounds());
+          });
+        }
+      }
+
+      // // Checks to see what school the address would be assigned to and displays results
+      function checkAddress(address, boundaries, schools) {
+        let answer = document.getElementById('results');
         let i = 0;
-        var len = areas.length;
-        areas.forEach(function(area){
-          if(poly.containsLocation(latLng, area)){
-            return i;
+        var len = boundaries.length;
+        var result;
+        boundaries.forEach(function(boundary){
+          if(address.zip == boundary.zip){
+            if(address.street == boundary.street){
+              if(boundary.low <= address.num && boundary.high >= address.num){
+                result = schools.filter(school => school.id == boundary[address.grade])[0];
+              }
+            }
           } else {
             i++;
             if(i == len){
-              console.log('not found');
-              return;
+              console.log('no school not found in your area');
+              result = -1;
             }
           }
         });
-        return i;
+        return result;
       }
     </script>
   </body>
