disable form fields

--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
             <div class="form-row">
               <div class="form-group col-md-10">
                 <label for="validationCustom03">Street address</label>
-                <span class="slimField"><input class="form-control" id="street_number"/></span>
-                <span class="wideField" colspan="2"><input class="form-control" id="route" /></span>
+                <span class="slimField"><input class="form-control" id="street_number" disabled/></span>
+                <span class="wideField" colspan="2"><input class="form-control" id="route" disabled/></span>
               </div>
               <div class="form-group col-md-6">
                 <label for="validationCustom03">City</label>
-                <span class="wideField" colspan="3"><input class="form-control" id="locality" /></span>
+                <span class="wideField" colspan="3"><input class="form-control" id="locality" disabled/></span>
               </div>
               <div class="col-md-3 mb-3">
                 <label for="validationCustom03">State</label>
-                <span class="slimField"><input class="form-control" id="administrative_area_level_1" /></span>
+                <span class="slimField"><input class="form-control" id="administrative_area_level_1" disabled/></span>
               </div>
               <div class="col-md-3 mb-3">
                 <label for="validationCustom03">Zip code</label>
-                <span class="wideField"><input class="form-control" id="postal_code" /></span>
+                <span class="wideField"><input class="form-control" id="postal_code" disabled/></span>
               </div>
               <div class="form-row hidden">
                 <span class="label">Country</span>
