hide address form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </select>
             </div>
             </div>
-            <div class="form-row">
+            <div class="form-row hidden">
               <div class="form-group col-md-10">
                 <label for="validationCustom03">Street address</label>
                 <span class="slimField"><input class="form-control" id="street_number" disabled/></span>
