clarify no schools found messagee

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           display.phone.innerHTML = assignedSchool.phone;
           display.address.innerHTML = assignedSchool.address;
         } else {
-          display.error.innerHTML = 'Sorry, no results could be returned';
+          display.error.innerHTML = 'Address is out of district';
         }
       });
 
