--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <div class="panel-title">Find a School</div>
         </div>
         <div class="panel-body">
+          <div id="instructions">
+            Please begin typing address in the box below and select an option from the dropdown list.
+          </div>
           <form id="address_table">
             <div class="form-row">
               <div class="form-group col-md-10">
@@ -72,7 +75,7 @@
           <form>
 
             <div class="col-auto my-1" style="margin-bottom20px;padding-left:0;">
-              <button type="button" class="btn btn-primary" id="submit" style="margin-top:20px;margin-bottom:20px;">Check Location</button>
+              <button type="button" class="btn btn-primary" id="submit" disabled style="margin-top:20px;margin-bottom:20px;">Check Location</button>
             </div>
 
             <div class="col-auto my-1">
@@ -151,6 +154,7 @@
           if (componentForm[addressType]) {
             var val = place.address_components[i][componentForm[addressType]];
             document.getElementById(addressType).value = val;
+            document.getElementById('submit').disabled = false;
           }
         }
       }
@@ -170,6 +174,8 @@
           });
         }
       }
+
+
 
       let display = {
         school: document.getElementById('school_name'),
@@ -204,6 +210,7 @@
         } else {
           display.error.innerHTML = 'Address is out of district. Please make sure you are using a complete street address within the Beverly Hills School District';
         }
+        document.getElementById('submit').disabled = true;
       });
 
       // // Checks to see what school the address would be assigned to and displays results
